--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ org.gradle.daemon=false
 
 mc_version=1.16.5
 mcp_mappings=20201028-1.16.3
+java_version=8
 forge_version=36.0.44
 
 tetra_version=3.19.0
