--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,19 @@ version = "${mc_version}-${tetra_version}"
 group = 'se.mickelus.tetra'
 archivesBaseName = "tetra"
 
+allprojects {
+    repositories {
+        jcenter()
+    }
+
+    // Allow 400 errors.
+    gradle.projectsEvaluated {
+        tasks.withType(JavaCompile) {
+            options.compilerArgs << "-Xmaxerrs" << "4000"
+        }
+    }
+}
+
 repositories {
     mavenLocal()
     maven { url = "https://maven.theillusivec4.top/" }
