--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -20,7 +20,7 @@ credits="red1854th: korean localization, Jeffku0107: chinese localization, Arvid
 [[dependencies.tetra]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.18,1.18.1)"
+    versionRange="[1.18,)"
     ordering="NONE"
     side="BOTH"
 [[dependencies.tetra]]
