--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -49,7 +49,7 @@ body:
   - type: input
     id: mgui-version
     attributes:
-      label: mGui version
+      label: mutil/mGui version
       placeholder: 2.0.0
     validations:
       required: true
