--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         maven { url = 'https://files.minecraftforge.net/maven' }
         maven { url = "https://plugins.gradle.org/m2/" }
         maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
-        jcenter()
+        maven { url 'https://maven.blamejared.com' }
         mavenCentral()
     }
     dependencies {
@@ -38,10 +38,6 @@ group = 'se.mickelus.tetra'
 archivesBaseName = "tetra"
 
 allprojects {
-    repositories {
-        jcenter()
-    }
-
     // Allow 400 errors.
     gradle.projectsEvaluated {
         tasks.withType(JavaCompile) {
