--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ mc_version=1.18.1
 java_version=17
 forge_version=39.0.44
 tetra_version=4.6.0
-mutil_version=1.18.1-4.2.0
+mutil_version=1.18.1-4.5.0-pre.1
 curios_version=1.18.1-5.0.4.2
 botania_version=1.16.4-410
 patchouli_version=1.16.4-48
