change: geodes now generate in the world again, they can be found in deepslate below y=0 change: deepslate blocks that contain geodes glimmer when lit change: geodes now contain raw ore instead of nuggets

--- a/build.gradle
+++ b/build.gradle
@@ -40,10 +40,7 @@ archivesBaseName = "tetra"
 repositories {
     mavenLocal()
     maven { url = "https://maven.theillusivec4.top/" }
-    maven {
-        name = 'patchouli/botania'
-        url = 'https://maven.blamejared.com/'
-    }
+    maven { url = 'https://maven.blamejared.com/' }
     maven {
         url "https://cursemaven.com"
         content {
